--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [Linux, Windows, macOS]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -35,8 +35,8 @@ jobs:
       uses: actions/upload-artifact@v4.3.1
       with:
         # Artifact name
-        name: algo_kata-${{ matrix.os }}-${{github.event.release.tag_name}}
+        name: algo_kata-${{ runner.os }}-${{github.event.release.tag_name}}
         # A file, directory or wildcard pattern that describes what to upload
         path: |
-          ${{ matrix.os == 'Windows' && 'algo_kata.exe' || 'algo_kata' }}
+          ${{ runner.os == 'Windows' && 'algo_kata.exe' || 'algo_kata' }}
           config.toml
